--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",  // Добавляем команду запуска
+    "start": "node bot.js",  // Вот эта строка запускает ваш бот
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
