--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TELEGRAM_TOKEN=7347312595:AAH6DRVMK3S6YRA-r4g4Sqn_0ojgnjk6PB4
 OUTLINE_API_URL=https://195.133.28.56:20462/sx2SR0Cxydyv1RhDh2nDYg
-admin_id=398885257
+ADMIN_ID=398885257
