--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,31 @@ services:
     build: .
     container_name: telegram-bot
     environment:
-      - TELEGRAM_TOKEN=your_telegram_token
-      - OUTLINE_API_URL=your_outline_api_url
-      - ADMIN_ID=your_admin_id
-      - OUTLINE_USERS_GATEWAY=ssconf://bestvpn.world
-      - OUTLINE_SALT=50842
-      - CONN_NAME=RaphaelVPN
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=your_db_user
-      - DB_PASSWORD=your_db_password
-      - DB_NAME=your_db_name
+      - TELEGRAM_TOKEN=your_telegram_token           # Замените на ваш токен Telegram
+      - OUTLINE_API_URL=your_outline_api_url          # URL вашего Outline API
+      - ADMIN_ID=your_admin_id                        # ID администратора
+      - OUTLINE_USERS_GATEWAY=ssconf://bestvpn.world  # URL для подключения
+      - OUTLINE_SALT=50842                            # Соль для Outline
+      - CONN_NAME=RaphaelVPN                          # Имя соединения
+      - DB_HOST=postgres                               # Хост базы данных (контейнер postgres)
+      - DB_PORT=5432                                   # Порт базы данных
+      - DB_USER=your_db_user                          # Имя пользователя базы данных
+      - DB_PASSWORD=your_db_password                  # Пароль для базы данных
+      - DB_NAME=your_db_name                          # Имя вашей базы данных
     volumes:
-      - .:/usr/src/app
-    restart: unless-stopped
+      - .:/usr/src/app                                 # Монтирование текущей директории в контейнер
+    restart: unless-stopped                           # Перезапуск контейнера, если он остановлен
 
   postgres:
-    image: postgres:13
-    container_name: postgres
+    image: postgres:13                                # Образ PostgreSQL
+    container_name: postgres                          # Имя контейнера
     environment:
-      - POSTGRES_USER=your_db_user
-      - POSTGRES_PASSWORD=your_db_password
-      - POSTGRES_DB=your_db_name
+      - POSTGRES_USER=your_db_user                   # Имя пользователя для PostgreSQL
+      - POSTGRES_PASSWORD=your_db_password           # Пароль для PostgreSQL
+      - POSTGRES_DB=your_db_name                     # Имя базы данных, создаваемой при старте контейнера
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+      - postgres_data:/var/lib/postgresql/data        # Данные базы данных сохраняются на локальном диске
+    restart: unless-stopped                           # Перезапуск контейнера, если он остановлен
 
 volumes:
-  postgres_data:
+  postgres_data:                                      # Определение volume для PostgreSQL
