--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,26 @@ services:
     build: .
     container_name: telegram-bot
     environment:
-      - TELEGRAM_TOKEN=your_telegram_token           # Замените на ваш токен Telegram
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+        # остальные переменные окружения         # Замените на ваш токен Telegram
       - OUTLINE_API_URL=your_outline_api_url          # URL вашего Outline API
       - ADMIN_ID=your_admin_id                        # ID администратора
       - OUTLINE_USERS_GATEWAY=ssconf://bestvpn.world  # URL для подключения
       - OUTLINE_SALT=50842                            # Соль для Outline
       - CONN_NAME=RaphaelVPN                          # Имя соединения
-      - DB_HOST=postgres                               # Хост базы данных (контейнер postgres)
-      - DB_PORT=5432                                   # Порт базы данных
+      - DB_HOST=postgres                              # Хост базы данных (контейнер postgres)
+      - DB_PORT=5432                                  # Порт базы данных
       - DB_USER=your_db_user                          # Имя пользователя базы данных
       - DB_PASSWORD=your_db_password                  # Пароль для базы данных
       - DB_NAME=your_db_name                          # Имя вашей базы данных
     volumes:
-      - .:/usr/src/app                                 # Монтирование текущей директории в контейнер
+      - .:/usr/src/app                                # Монтирование текущей директории в контейнер
     restart: unless-stopped                           # Перезапуск контейнера, если он остановлен
+    dns:                                              # DNS-сервера для разрешения имен
+      - 8.8.8.8
+      - 8.8.4.4
+    networks:
+      - default
 
   postgres:
     image: postgres:13                                # Образ PostgreSQL
@@ -30,6 +36,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data        # Данные базы данных сохраняются на локальном диске
     restart: unless-stopped                           # Перезапуск контейнера, если он остановлен
+    networks:
+      - default
 
 volumes:
   postgres_data:                                      # Определение volume для PostgreSQL
+
+networks:
+  default:
