--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "name": "outline_server",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "app/bot.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "node app/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
