--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: postgres:13
+    image: postgres:15
     container_name: postgres
+    ports:
+      - 5434:5432
     env_file:
       - .env
     volumes:
