--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     env_file:
       - .env
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - /path/to/postgres/data:/var/lib/postgresql/data
     restart: unless-stopped
 
 volumes:
