--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,12 @@ services:
     image: postgres:15
     container_name: postgres
     ports:
-      - 5434:5432
+      - "5434:5432"
     env_file:
       - .env
     volumes:
       - /path/to/postgres/data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d
     restart: unless-stopped
 
 volumes:
