--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.13.1"
   },
@@ -10,6 +11,7 @@
   "main": "app/bot.js",
   "scripts": {
     "start": "node app/bot.js",
+    "dev": "nodemon app/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
