--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.13.1"
   },
